<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>sros2</name>
  <version>0.5.0</version>
  <description>Command line tools for managing SROS2 keys</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache License 2.0</license>

  <author email="morgan@osrfoundation.org">Morgan Quigley</author>
  <author>Mikael Arguedas</author>

  <depend>ros2cli</depend>

  <exec_depend>openssl</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
