<?xml version="1.0"?>
    <package format="2">
    <name>sros2_cmake</name>
    <version>0.6.3</version>
    <description>Cmake macros to configure security for nodes</description>
    <author email="aws-b9-platform@amazon.com">AWS B9 Team</author>
    <maintainer email="aws-b9-platform@amazon.com">AWS B9 Team</maintainer>
    <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>cmake</buildtool_depend>

    <build_depend>ament_cmake_test</build_depend>
    <build_depend>sros2</build_depend>
    <build_depend>ros2cli</build_depend>

    <build_export_depend>sros2</build_export_depend>
    <build_export_depend>ros2cli</build_export_depend>

    <test_depend>ament_cmake_lint_cmake</test_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
