<?xml version="1.0"?>
    <package format="2">
    <name>sros2_common_policies</name>
    <version>0.7.0</version>
    <description>Common policies profiles for security nodes via SROS2</description>
    <author email="michael@openrobotics.org">Michael Carroll</author>
    <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>ament_cmake_test</build_depend>
    <build_depend>sros2_cmake</build_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
